@@ -1,6 +1,5 @@
 package org.pedro.model;
 
-
 import java.time.OffsetDateTime;
 import java.util.ArrayList;
 import java.util.List;
@@ -11,40 +10,56 @@ import lombok.Getter;
 import lombok.ToString;
 
 @ToString
-public abstract  class Wallet {
+public abstract class Wallet {
     @Getter
     private final BankService service;
 
     protected final List<Money> money;
 
-    public Wallet(final BankService serviceType){
+    public Wallet(final BankService serviceType) {
         this.service = serviceType;
         this.money = new ArrayList<>();
     }
 
-    protected  List<Money> generateMoney(final long amount, final String description){
-            var history = new MoneyAudit(UUID.randomUUID(), service, description, OffsetDateTime.now());
-            return Stream.generate(()->new Money(history))
-            .limit(amount).toList();
+    protected List<Money> generateMoney(final long amount, final String description) {
+        var history = new MoneyAudit(UUID.randomUUID(), service, description, OffsetDateTime.now());
+        return Stream.generate(() -> new Money(history))
+                .limit(amount)
+                .toList();
     }
-    public long getFunds(){
+
+    public long getFunds() {
         return money.size();
     }
 
-    public void addMoney(final List<Money> money, final BankService service, final String description){
+    /** 
+     * Add existing Money objects, keeping their audit trail.
+     */
+    public void addMoney(final List<Money> money, final BankService service, final String description) {
         var history = new MoneyAudit(UUID.randomUUID(), service, description, OffsetDateTime.now());
-        money.forEach( (Money m) -> m.addHistory(history));
+        money.forEach(m -> m.addHistory(history));
         this.money.addAll(money);
     }
 
-    public List<Money> reduceMoney(final long amount){
+    /** 
+     * Generate and add new Money entries. 
+     */
+    public void addMoney(final long amount, final String description) {
+        var newMoney = generateMoney(amount, description);
+        this.money.addAll(newMoney);
+    }
+
+    public List<Money> reduceMoney(final long amount) {
         List<Money> toRemove = new ArrayList<>();
-        for (int i = 0; i < amount; i++){
-            toRemove.add(this.money.removeFirst());
+        for (int i = 0; i < amount && !money.isEmpty(); i++) {
+            toRemove.add(this.money.remove(0)); // safe for ArrayList
         }
         return toRemove;
     }
-    public List<MoneyAudit> getFinancialTransactions(){
-        return  money.stream().flatMap((Money m)->m.getHistory().stream()).toList();
+
+    public List<MoneyAudit> getFinancialTransactions() {
+        return money.stream()
+                .flatMap(m -> m.getHistory().stream())
+                .toList();
     }
 }
